# MazeRunner

./: CMakeLists.txt  README.md  aruco_tracker.cpp  aruco_tracker.h  build_maze_runner.sh  how_to_launch.txt  image_processing.cpp  image_processing.h  joint_position.txt  main.txt  package.xml  robot_control.cpp  robot_control.txt  robot_control_simple.txt
aruco_tracker/: CMakeLists.txt  package.xml
aruco_tracker/include/aruco_tracker/: aruco_tracker.h
aruco_tracker/launch/: aruco_tracker.launch
aruco_tracker/src/: aruco_tracker.cpp
config/: rviz_config.rviz  servo.yaml
launch/: image_processing.launch  maze_runner.launch  robot_sim.launch  waypoint_test.launch
maze_runner/: CMakeLists.txt  README.md  package.xml
maze_runner/config/: rviz_config.rviz  servo_config.yaml
maze_runner/include/maze_runner/: maze_solver.h  maze_visualizer.h  robot_control.h
maze_runner/launch/: maze_runner.launch  robot_sim.launch
maze_runner/scripts/: gui.py
maze_runner/src/: image_processing.cpp  image_processing.h  main.cpp  maze_solver.cpp  maze_solver.h  maze_visualizer.cpp  robot_control.cpp
pattern_detector/: CMakeLists.txt  package_xml.txt
pattern_detector/src/: generate_test_images.cpp  pattern_detector.cpp  pattern_detector.h  pattern_detector_node.cpp  pattern_detector_test.cpp
src/: CMakeLists.txt  control.txt  image_processing.cpp  image_processing.h  main.cpp  maze_solver.cpp  maze_solver.h  old_image_processing  robot_control.cpp  waypoint_test.cpp  waypoint_test.txt
