<?xml version="1.0"?>
<package format="2">
  <name>aruco_tracker</name>
  <version>0.1.0</version>
  <description>Package for ArUco marker tracking with RealSense camera</description>
  
  <maintainer email="nicholasuremobvic@gmail.com">user</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>aruco_ros</depend>
  <depend>realsense2_camera</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>
</package>
